api: Add settings.device_channel_index
