# pkg/ttnpb/gatewayserver.pb.fm.go
@@ -162,6 +162,7 @@ var GatewayDownFieldPathsNested = []string{
 	"downlink_message.settings.scheduled.data_rate.modulation.lora.bandwidth",
 	"downlink_message.settings.scheduled.data_rate.modulation.lora.spreading_factor",
 	"downlink_message.settings.scheduled.data_rate_index",
+	"downlink_message.settings.scheduled.device_channel_index",
 	"downlink_message.settings.scheduled.enable_crc",
 	"downlink_message.settings.scheduled.frequency",
 	"downlink_message.settings.scheduled.gateway_channel_index",
